--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
+      height: 100%;
+      overflow: hidden;
   }
   .bg2 {
       background-image: url(res/madeinabyss.jpg); /* Filepath to your image */
@@ -66,6 +68,8 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
+      height: 100%;
+      overflow: hidden;
   }
   .bg3 {
       background-image: url(res/kiminonawa.jpg);  /* Filepath to your image */
@@ -77,6 +81,8 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
       -o-background-size: cover; 
       background-size: cover; 
       color: white;
+      height: 100%;
+      overflow: hidden;
   }
   </style>
 
