--- a/index.html
+++ b/index.html
@@ -56,8 +56,12 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
-      height: 100%;
       overflow: hidden;
+      position: fixed; 
+      top: 0; 
+      left: 0; 
+      min-width: 100%;
+      min-height: 100%;
   }
   .bg2 {
       background-image: url(res/madeinabyss.jpg); /* Filepath to your image */
@@ -70,6 +74,10 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
       background-size: cover; 
       height: 100%;
       overflow: hidden;
+      top: 0; 
+      left: 0; 
+      min-width: 100%;
+      min-height: 100%;
   }
   .bg3 {
       background-image: url(res/kiminonawa.jpg);  /* Filepath to your image */
@@ -83,6 +91,10 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
       color: white;
       height: 100%;
       overflow: hidden;
+      top: 0; 
+      left: 0; 
+      min-width: 100%;
+      min-height: 100%;
   }
   </style>
 
