--- a/index.html
+++ b/index.html
@@ -48,54 +48,58 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   
 <style type="text/css">
   .bg1 {
-      background-image: url(res/nachos.jpg);     /* Filepath to your image */
+      background-image: url(res/nachos.jpg);        /* Filepath to your image */
       background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed; 
+      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
+      background-color: #343538;
       overflow: hidden;
-      position: fixed; 
-      top: 0; 
-      left: 0; 
-      min-width: 100%;
-      min-height: 100%;
+      width: 100vw;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -10;
   }
   .bg2 {
-      background-image: url(res/madeinabyss.jpg); /* Filepath to your image */
+      background-image: url(res/madeinabyss.jpg);   /* Filepath to your image */
       background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed; 
+      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
-      height: 100%;
-      overflow: hidden;
-      top: 0; 
-      left: 0; 
-      min-width: 100%;
-      min-height: 100%;
+      background-color: #343538;
+      width: 100vw;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -10;
   }
   .bg3 {
-      background-image: url(res/kiminonawa.jpg);  /* Filepath to your image */
+      background-image: url(res/kiminonawa.jpg);    /* Filepath to your image */
       background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed; 
+      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
       color: white;
-      height: 100%;
-      overflow: hidden;
-      top: 0; 
-      left: 0; 
-      min-width: 100%;
-      min-height: 100%;
-  }
+      background-color: #343538;
+      width: 100vw;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: -10;
+  } 
   </style>
 
 </head>
