B-#2/3-PATCH: Bug fix attempt #1

--- a/index.html
+++ b/index.html
@@ -47,16 +47,13 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 </script>
   
 <style type="text/css">
+
+/* Android/Chromium bugs: https://issuetracker.google.com/issues/36908439, https://bugs.chromium.org/p/chromium/issues/detail?id=344338 */
+
   .bg1 {
       background-image: url(res/nachos.jpg);        /* Filepath to your image */
+      background-attachment: fixed;
       background-repeat: no-repeat;
-      background-position: center center;
-      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover; 
-      background-size: cover; 
-      background-color: #343538;
       overflow: hidden;
       width: 100vw;
       height: 100vh;
@@ -64,41 +61,42 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
       top: 0;
       left: 0;
       z-index: -10;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
   }
   .bg2 {
       background-image: url(res/madeinabyss.jpg);   /* Filepath to your image */
+      background-attachment: fixed;
       background-repeat: no-repeat;
-      background-position: center center;
-      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover; 
-      background-size: cover; 
-      background-color: #343538;
+      overflow: hidden;
       width: 100vw;
       height: 100vh;
       position: fixed;
       top: 0;
       left: 0;
       z-index: -10;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
   }
   .bg3 {
       background-image: url(res/kiminonawa.jpg);    /* Filepath to your image */
+      background-attachment: fixed;
       background-repeat: no-repeat;
-      background-position: center center;
-      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover; 
-      background-size: cover; 
-      color: white;
-      background-color: #343538;
+      overflow: hidden;
       width: 100vw;
       height: 100vh;
       position: fixed;
       top: 0;
       left: 0;
       z-index: -10;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
   } 
   </style>
 
