--- a/index.html
+++ b/index.html
@@ -51,48 +51,45 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 /* Android/Chromium bugs: https://issuetracker.google.com/issues/36908439, https://bugs.chromium.org/p/chromium/issues/detail?id=344338 */
 
   .bg1 {
-      background-image: url(res/nachos.jpg);        /* Filepath to your image */
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      overflow: hidden;
-      width: 100vw;
-      height: 100vh;
+    content: "";
+      display: block;
       position: fixed;
-      top: 0;
       left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
       z-index: -10;
+      background: url(res/nachos.jpg);    /* Filepath to your image */
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
   }
   .bg2 {
-      background-image: url(res/madeinabyss.jpg);   /* Filepath to your image */
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      overflow: hidden;
-      width: 100vw;
-      height: 100vh;
+    content: "";
+      display: block;
       position: fixed;
-      top: 0;
       left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
       z-index: -10;
+      background: url(res/madeinabyss.jpg);    /* Filepath to your image */
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
   }
   .bg3 {
-      background-image: url(res/kiminonawa.jpg);    /* Filepath to your image */
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      overflow: hidden;
-      width: 100vw;
-      height: 100vh;
+      content: "";
+      display: block;
       position: fixed;
-      top: 0;
       left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
       z-index: -10;
+      background: url(res/kiminonawa.jpg);    /* Filepath to your image */
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
