--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: -10;
   background: url(res/nachos.jpg) no-repeat center center;
   -webkit-background-size: cover;
@@ -73,7 +73,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: -10;
   background: url(res/madeinabyss.jpg) no-repeat center center;
   -webkit-background-size: cover;
@@ -89,7 +89,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   z-index: -10;
   background: url(res/kiminonawa.jpg) no-repeat center center;
   -webkit-background-size: cover;
