--- a/index.html
+++ b/index.html
@@ -51,8 +51,16 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 /* Android/Chromium bugs: https://issuetracker.google.com/issues/36908439, https://bugs.chromium.org/p/chromium/issues/detail?id=344338 */
 
 .bg1 {
-    height:100%;
-    background: url(res/nachos.jpg) no-repeat center center fixed;
+    background-attachment: fixed;
+    background-image: url(res/nachos.jpg);
+    background-repeat: no-repeat;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -10;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -60,8 +68,16 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   }
 
 .bg2 {
-    height:100%;
-    background: url(res/nachos.jpg) no-repeat center center fixed;
+    background-attachment: fixed;
+    background-image: url(res/madeinabyss.jpg);
+    background-repeat: no-repeat;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -10;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -69,8 +85,16 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   }
 
 .bg3 {
-    height:100%;
-    background: url(res/nachos.jpg) no-repeat center center fixed;
+  background-attachment: fixed;
+    background-image: url(res/kiminonawa.jpg);
+    background-repeat: no-repeat;
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -10;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -86,7 +110,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   <![endif]-->
 
   <br><br><br><br><br><br>
-  <h1>Website under construction. Contact aidswidjaja#2805 on Discord for more information.</h1>
+  <h1>Pineapple - Website under construction. Contact aidswidjaja#2805 on Discord for more information.</h1>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
   <script>
