--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   <![endif]-->
 
   <br><br><br><br><br><br>
-  <h1>Pineapple - Website under construction. Contact aidswidjaja#2805 on Discord for more information.</h1>
+  <h1>Website under construction. Contact aidswidjaja#2805 on Discord for more information.</h1>
+  <br><br><br><br><br><br>
+  <h1>Pineapples are yummy</h1>
+  <br><br><br><br><br><br>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
   <script>
