--- a/index.html
+++ b/index.html
@@ -48,58 +48,43 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   
 <style type="text/css">
   .bg1 {
-      background-image: url(res/nachos.jpg);        /* Filepath to your image */
+      background-image: url(res/nachos.jpg);     /* Filepath to your image */
       background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
+      background-attachment: fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
-      background-color: #343538;
+      height: 100%;
       overflow: hidden;
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -10;
   }
   .bg2 {
-      background-image: url(res/madeinabyss.jpg);   /* Filepath to your image */
+      background-image: url(res/madeinabyss.jpg); /* Filepath to your image */
       background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
+      background-attachment: fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
-      background-color: #343538;
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -10;
+      height: 100%;
+      overflow: hidden;
   }
   .bg3 {
-      background-image: url(res/kiminonawa.jpg);    /* Filepath to your image */
+      background-image: url(res/kiminonawa.jpg);  /* Filepath to your image */
       background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed;                 /* https://issuetracker.google.com/issues/36908439 */
+      background-attachment: fixed; 
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover; 
       background-size: cover; 
       color: white;
-      background-color: #343538;
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -10;
-  } 
+      height: 100%;
+      overflow: hidden;
+  }
+
   </style>
 
 </head>
@@ -111,6 +96,8 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 
   <br><br><br><br><br><br>
   <h1>Website under construction. Contact aidswidjaja#2805 on Discord for more information.</h1>
+  <br><br><br><br><br><br>
+  <h1>Version Pineapple</h1>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
   <script>
@@ -118,5 +105,5 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script> -->
-</body">
+</body>
 </html>
