--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 --> 
 
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="" id="bod" onload="backgr()">
 
 <head>
   <meta charset="utf-8">
@@ -89,7 +89,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 
 </head>
 
-<body id="bod" onload="backgr()">
+<body>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
