--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 --> 
 
 <!doctype html>
-<html class="no-js" lang="" id="bod" onload="backgr()">
+<html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
@@ -47,49 +47,41 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 </script>
   
 <style type="text/css">
+  body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
   .bg1 {
       background-image: url(res/nachos.jpg);     /* Filepath to your image */
-      background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed; 
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover; 
-      background-size: cover; 
-      height: 100%;
-      overflow: hidden;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+			background-color: #999;
   }
   .bg2 {
       background-image: url(res/madeinabyss.jpg); /* Filepath to your image */
-      background-repeat: no-repeat;
       background-position: center center;
-      background-attachment: fixed; 
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover; 
-      background-size: cover; 
-      height: 100%;
-      overflow: hidden;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+			background-color: #999;
   }
   .bg3 {
       background-image: url(res/kiminonawa.jpg);  /* Filepath to your image */
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-attachment: fixed; 
-      -webkit-background-size: cover;
-      -moz-background-size: cover;
-      -o-background-size: cover; 
-      background-size: cover; 
-      color: white;
-      height: 100%;
-      overflow: hidden;
+			background-position: center center;
+			background-repeat: no-repeat;
+			background-attachment: fixed;
+			background-size: cover;
+			background-color: #999;
   }
 
   </style>
 
 </head>
 
-<body>
+<body id="bod" onload="backgr()">
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
