--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   <h1>Website under construction. Contact aidswidjaja#2805 on Discord for more information.</h1>
   <br><br><br><br><br><br>
   <h1>Version Pineapple</h1>
+  <br><br><br><br><br><br>
+  <h1>Yeah I like pineapples</h1>
+  <br><br><br><br><br><br>
+  <h1>Eat more of them!</h1>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
   <script>
