--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
     }
   }
 </script>
+
+<!-- https://codepen.io/theiwaz/pen/vybjc -->
+<!-- See issue #2 on GitHub (aidswidjaja/Lively) -->
+<!-- Android/Chromium bugs: https://issuetracker.google.com/issues/36908439, https://bugs.chromium.org/p/chromium/issues/detail?id=344338 -->
   
 <style type="text/css">
   body {
@@ -58,7 +62,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
-			background-color: #999;
+			background-color: #343538;
   }
   .bg2 {
       background-image: url(res/madeinabyss.jpg); /* Filepath to your image */
@@ -66,7 +70,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
-			background-color: #999;
+			background-color: #343538;
   }
   .bg3 {
       background-image: url(res/kiminonawa.jpg);  /* Filepath to your image */
@@ -74,7 +78,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
-			background-color: #999;
+			background-color: #343538;
   }
 
   </style>
@@ -89,11 +93,11 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   <br><br><br><br><br><br>
   <h1>Website under construction. Contact aidswidjaja#2805 on Discord for more information.</h1>
   <br><br><br><br><br><br>
-  <h1>Version Pineapple</h1>
+  <h1>Ichi</h1>
   <br><br><br><br><br><br>
-  <h1>Yeah I like pineapples</h1>
+  <h1>Ni</h1>
   <br><br><br><br><br><br>
-  <h1>Eat more of them!</h1>
+  <h1>San/h1>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
   <script>
