--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 licen
   <br><br><br><br><br><br>
   <h1>Ni</h1>
   <br><br><br><br><br><br>
-  <h1>San/h1>
+  <h1>San</h1>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
   <script>
