--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ https://github.com/aidswidjaja
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Lively</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
