--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://github.com/aidswidjaja
   <!-- Website test screen START -->
   <center> <!-- depreceated tags used for testing only -->
   <br><br><br><br><br><br>
-  <h1>This website is under construction. Contact aidswidjaja#2805 for more information.</h1>
+  <h1>[A] This website is under construction. Contact aidswidjaja#2805 for more information.</h1>
   <br><br><br><br><br><br>
   <h1>Example text listed below used for testing purposes only.</h1>
   <br><br><br><br><br><br>
