More updates to Lively website splash screen, navbar template

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
 Made with ❤️ and 🐼 by Adrian W (aidswidjaja#2805) under the GPL-3.0 license. © 2020
 https://github.com/aidswidjaja
---> 
+-->
 
 <!doctype html>
 <html class="no-js" lang="">
@@ -17,18 +17,22 @@ https://github.com/aidswidjaja
   <!-- Place favicon.ico in the root directory -->
   <meta name="theme-color" content="#fafafa">
 
-<!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="js/bootstrap.js"></script>
-<link rel="stylesheet" href="css/bootstrap.css">
-<link rel="stylesheet" href="css/index.css">
+  <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="js/bootstrap.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/index.css">
 
-<!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
-<!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
+  <!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
+  <!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
 
-<script src="js/backgr.js"></script>
-<link rel="stylesheet" href="css/index.css">
+  <script src="js/backgr.js"></script>
+  <link rel="stylesheet" href="css/index.css">
 
 </head>
 
@@ -38,27 +42,32 @@ https://github.com/aidswidjaja
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Website test screen START -->
-  <center> <!-- depreceated tags used for testing only -->
-  <br><br><br><br><br><br>
-  <h1>[A12] This website is under construction. Contact aidswidjaja#2805 for more information.</h1>
-  <br><br><br><br><br><br>
-  <h1>Example text listed below used for testing purposes only.</h1>
-  <br><br><br><br><br><br>
-  <h2 style="color: red;">SAMPLE TEXT ONE | This text is rendered in the <strong>defined text colour for the corresponding background image</strong></h2>
-  <h3>Super Smash Bros. is a series of crossover fighting video games published by Nintendo, and primarily features characters from various Nintendo franchises. The series was created by Masahiro Sakurai, who has directed every game in the series. The original Super Smash Bros. was released in 1999 for the Nintendo 64. The series achieved even greater success with the release of Super Smash Bros. Melee, which was released in 2001 for the GameCube and became the bestselling game on that system. A third installment, Super Smash Bros. Brawl, was released in 2008 for the Wii. Although HAL Laboratory had been the developer of the first two games, the third game was developed through the collaboration of several companies. The fourth installment, Super Smash Bros. for Nintendo 3DS and Wii U, were released in 2014 for the Nintendo 3DS and Wii U, respectively. The 3DS installment was the first for a handheld platform. A fifth installment, Super Smash Bros. Ultimate, was released in 2018 for the Nintendo Switch.
-  <br><br><br><br><br><br>
-  <h2 style="color: red;">SAMPLE TEXT ONE CONTINUED</h2>
-  <h3>Made in Abyss (Japanese: メイドインアビス, Hepburn: Meido in Abisu) is a Japanese manga series by Akihito Tsukushi and published by Takeshobo. It has been serialized online in Takeshobo's digital publication Web Comic Gamma since 2012 and has been collected into seven tankōbon volumes. An anime television series adaptation by Kinema Citrus aired its first season from July 7 to September 29, 2017. A sequel film premiered in Japan on January 17, 2020. A sequel to the film has been announced. The story follows an orphaned young girl, Riko, who finds and befriends a humanoid robot Reg and descends with it into the titular "Abyss", that leads deep into the Earth, in hopes of finding her mother. </h3>
-  <br><br><br><br><br><br>
-  <h2 style="color: red;">SAMPLE TEXT TWO | This text is rendered in the <strong>DARK text colour (#343538) REGARDLESS OF THE BACKGROUND IMAGE</strong></h2>
-  <h3 style="color: #343538">An orphaned girl named Riko lives in the Belchero Orphanage in the town of Orth. The town surrounds a strange, giant hole going deep into the Earth, which is commonly called the Abyss. The Abyss harbors artifacts and remnants of a civilization long gone, and is therefore the popular hunting spot for so-called Cave Raiders, who undertake arduous and dangerous descents into the mist-filled pit to recover whatever relics they can find. Returning from the Abyss can be dangerous as "the Curse of the Abyss," a mysterious and potentially fatal malady, manifests upon ascension. The deeper one goes, the more acute the effects of the curse; few who have descended into the lower regions have returned to tell of their experiences. Some legendary Cave Raiders earn the title of White Whistle, one of them being Riko's mother, Lyza. Riko's longing in life is to follow in her mother's footsteps and become a White Whistle. One day she discovers a robot resembling a human boy in the Abyss and names him Reg. Riko and her friends sneak Reg into Belchero and quickly welcome him into their close-knit group. Some time later, a balloon reaches the surface from the depths of the Abyss containing pages of discoveries made by Lyza, as well as a message for Riko stating she is waiting at the bottom of the Abyss. Riko, determined to find her mother, bids farewell to her friends and departs to the Abyss with Reg as her companion. </h3>
-  <br><br><br><br><br><br>
-  <h2 style="color: red;">SAMPLE TEXT THREE | This text is rendered in the <strong>LIGHT text colour (#ffffff) REGARDLESS OF THE BACKGROUND IMAGE</strong></h2>
-  <h3 style="color: #ffffff;">Your Name. (Japanese: 君の名は。, Hepburn: Kimi no Na wa.) is a 2016 Japanese animated romantic fantasy drama film written and directed by Makoto Shinkai, and produced by CoMix Wave Films. The film was produced by Noritaka Kawaguchi and Genki Kawamura, with music composed by Radwimps. Your Name tells the story of Taki, a high school boy in Tokyo and Mitsuha, a high school girl in a rural town, who suddenly and inexplicably begin to swap bodies. The film stars the voices of Ryunosuke Kamiki, Mone Kamishiraishi, Masami Nagasawa and Etsuko Ichihara. Shinkai's eponymous novel was published a month before the film's premiere. Your Name was distributed by Toho. It premiered at the Anime Expo 2016 convention in Los Angeles, California on July 3, 2016, and in Japan on August 26, 2016. It was praised for its animation, complex narrative, musical score, and emotional weight. The film was also a major commercial success, with a total gross of $359 million, becoming the highest-grossing anime film and Japanese film of all time, the fourth highest-grossing film of all time in Japan, the eighth highest-grossing traditionally animated film, and the 14th highest-grossing non-English film worldwide. The film won the Best Animated Feature Film award at 49th Sitges Film Festival, the 2016 Los Angeles Film Critics Association Awards, and the 71st Mainichi Film Awards, as well as receiving a nomination for the 40th Japan Academy Prize for the Best Animation of the Year. The film was followed by Weathering with You in 2019, in which Taki and Mitsuha appeared. An American live-action remake is currently in development. </h3>
+  <!-- Navbar -->
 
-</center>
-  <!-- Website test screen END -->
+  <nav class="navbar" id="topnav">
+    <a class="navbar-brand" href="#"> <!-- Make sure to update this on each page -->
+      <img src="res/logo.png" width="64" height="64" alt="Lively logo">
+    </a>
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Features</a>
+        <a class="nav-item nav-link" href="#">Pricing</a>
+        <a class="nav-item nav-link disabled" href="#">Disabled</a>
+      </div>
+  </nav>
+
+  <!-- Splash Text -->
+
+  <div id="splash">
+    <div class="container">
+      <h1 class="display-1" id="splashtext">Welcome to Lively</h1>
+      <p class="lead" id="splashtext">Lively is a server based on providing assistance related to mental health. We strongly believe that the people who need someone to talk to definitely deserve to be treated better.
+        Here at Lively, we aim at listening to you and helping you out in every possible manner.</p>
+          <a href="https://discord.gg/hv7u9bT"class="btn btn-lg btn-outline-light" id="splashbutton">Join our Discord</a>
+    </div>
+  </div>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID.
   <script>
@@ -67,4 +76,5 @@ https://github.com/aidswidjaja
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script> -->
 </body>
+
 </html>
