--- a/index.html
+++ b/index.html
@@ -40,10 +40,23 @@ https://github.com/aidswidjaja
 
   <!-- Navbar -->
 
-  <nav class="navbar" id="topnav">
+  <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
     <a class="navbar-brand" href="#"> <!-- Make sure to update this on each page -->
       <img src="res/logo.png" width="64" height="64" alt="Lively logo">
     </a>
+
+    <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-nav">
+        <a id="navcolour" class="nav-item nav-link active" href="#">Boku no Hero Academia<span class="sr-only">(current)</span></a>
+        <a id="navcolour" class="nav-item nav-link" href="#">Made in Abyss</a>
+        <a id="navcolour" class="nav-item nav-link" href="#">Sword Art Online</a>
+        <a id="navcolour" class="nav-item nav-link disabled" href="#">Konosuba (example of disabled button)</a>
+      </div>
+    </div>
 
     <!-- todo: finish Navbar -->
 
