file directory structure update

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@ https://github.com/aidswidjaja
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-  <link rel="icon" type="image/png" href="../favicon.ico">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" type="image/png" href="favicon.ico">
   <meta name="theme-color" content="#fafafa">
 
   <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
@@ -24,17 +24,18 @@ https://github.com/aidswidjaja
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
-  <script src="../js/bootstrap.js"></script>
-  <link rel="stylesheet" href="../css/bootstrap.css">
-  <link rel="stylesheet" href="../css/index.css">
+  <script src="js/bootstrap.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
   <!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
 
-  <script src="../js/backgr.js"></script>
-  <link rel="stylesheet" href="../css/index.css">
-  <link rel="stylesheet" href="../css/backgr.css">
-  <link rel="stylesheet" href="../css/social/css/zocial.css">
+  <script src="js/backgr.js"></script>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/backgr.css">
+  <link rel="stylesheet" href="css/social/css/zocial.css">
+
 
 
 </head>
@@ -54,12 +55,12 @@ https://github.com/aidswidjaja
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="navbar-nav">
-        <a id="navcolour" class="nav-item nav-link" href="../index.html">Home</a>
+        <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
         <a id="navcolour" class="nav-item nav-link active" href="#">About Us<span class="sr-only">(current)</span></a>
-        <a id="navcolour" class="nav-item nav-link" href="../pages/disclaimer.html">Disclaimer</a>
+        <a id="navcolour" class="nav-item nav-link" href="disclaimer.html">Disclaimer</a>
         <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
-        <a id="navcolour" class="nav-item nav-link" href="../pages/hotlines.html">Hotlines</a>
-        <a id="navcolour" class="nav-item nav-link" href="../pages/breathe.html">Breathe</a>
+        <a id="navcolour" class="nav-item nav-link" href="hotlines.html">Hotlines</a>
+        <a id="navcolour" class="nav-item nav-link" href="breathe.html">Breathe</a>
         <p id="navcolour" class="nav-item nav-link disabled" style="float: right;">© Lively 2020</p>
         <a href="http://twitter.com/livelydiscord" class="zocial twitter icon d-lg-none"></a>
         <a href="http://instagram.com/livelydiscord" class="zocial instagram icon d-lg-none"></a>
@@ -83,7 +84,7 @@ https://github.com/aidswidjaja
   <div class="d-none d-lg-block" id="page">
     <h1 class="display-4" id="pagetext">About Us</h1>
     <br>
-    <img src="../res/lively.png" alt="Lively logo" style="height: 15vh;">
+    <img src="res/lively.png" alt="Lively logo" style="height: 15vh;">
     <h2 class="content" id="pagetext">Lively is a mental health (support) server based on <a href="https://discordapp.com">Discord</a>.
         It was launched on the 2nd of August, 2019. We strongly believe in working as a team to provide the best help we can- 
         whether it is just talking and providing solutions, or giving advice and showing the right path. 
@@ -93,7 +94,7 @@ https://github.com/aidswidjaja
 
   <div class="d-lg-none" id="pagemobile">
     <h1 class="display-4" id="pagetext">About Us</h1>
-    <img src="../res/lively.png" alt="Lively logo" style="height: 15vh; margin: auto;">
+    <img src="res/lively.png" alt="Lively logo" style="height: 15vh; margin: auto;">
     <h6 class="content" id="pagetext">Lively is a mental health (support) server based on <a href="https://discordapp.com">Discord</a>.
       It was launched on the 2nd of August, 2019. We strongly believe in working as a team to provide the best help we can- 
       whether it is just talking and providing solutions, or giving advice and showing the right path. 
