--- a/disclaimer.html
+++ b/disclaimer.html
@@ -13,8 +13,8 @@ https://github.com/aidswidjaja
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="../icon.png">
-  <link rel="icon" type="image/png" href="../favicon.ico">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="icon" type="image/png" href="favicon.ico">
   <meta name="theme-color" content="#fafafa">
 
   <!-- CDN: Bootstrap JQuery, Popper.js | Local: JS, CSS -->
@@ -24,17 +24,18 @@ https://github.com/aidswidjaja
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
     integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
     crossorigin="anonymous"></script>
-  <script src="../js/bootstrap.js"></script>
-  <link rel="stylesheet" href="../css/bootstrap.css">
-  <link rel="stylesheet" href="../css/index.css">
+  <script src="js/bootstrap.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <!-- Background Image Randomiser courtesy of Paul Lockett https://paul-lockett.co.uk/randombackground.html REQUIRES JAVASCRIPT AND CSS-->
   <!-- Responsive Background Image courtesy of Jennifer Kyrnin https://www.lifewire.com/responsive-background-images-3467001 REQUIRES CSS3-->
 
-  <script src="../js/backgr.js"></script>
-  <link rel="stylesheet" href="../css/index.css">
-  <link rel="stylesheet" href="../css/backgr.css">
-  <link rel="stylesheet" href="../css/social/css/zocial.css">
+  <script src="js/backgr.js"></script>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/backgr.css">
+  <link rel="stylesheet" href="css/social/css/zocial.css">
+
 
 </head>
 
@@ -43,8 +44,8 @@ https://github.com/aidswidjaja
   <!-- Navbar -->
 
   <nav class="navbar navbar-expand-lg navbar-dark" id="topnav">
-    <a class="navbar-brand" href="../index.html">
-      <img src="../res/lively.png" width="64" height="64" alt="Lively logo">
+    <a class="navbar-brand" href="index.html">
+      <img src="res/lively.png" width="64" height="64" alt="Lively logo">
     </a>
 
     <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,12 +54,12 @@ https://github.com/aidswidjaja
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <div class="navbar-nav">
-        <a id="navcolour" class="nav-item nav-link" href="../index.html">Home</a>
-        <a id="navcolour" class="nav-item nav-link" href="../pages/about.html">About Us</a>
+        <a id="navcolour" class="nav-item nav-link" href="index.html">Home</a>
+        <a id="navcolour" class="nav-item nav-link" href="pages/about.html">About Us</a>
         <a id="navcolour" class="nav-item nav-link active" href="#">Disclaimer<span class="sr-only">(current)</span></a>
         <a id="navcolour" class="nav-item nav-link" href="https://trello.com/b/U3EgslJI/lively-rules">Server Rules</a>
-        <a id="navcolour" class="nav-item nav-link" href="../pages/hotlines.html">Hotlines</a>
-        <a id="navcolour" class="nav-item nav-link" href="../pages/breathe.html">Breathe</a>
+        <a id="navcolour" class="nav-item nav-link" href="pages/hotlines.html">Hotlines</a>
+        <a id="navcolour" class="nav-item nav-link" href="pages/breathe.html">Breathe</a>
         <p id="navcolour" class="nav-item nav-link disabled" style="float: right;">© Lively 2020</p>
         <a href="http://twitter.com/livelydiscord" class="zocial twitter icon d-lg-none"></a>
         <a href="http://instagram.com/livelydiscord" class="zocial instagram icon d-lg-none"></a>
