--- a/disclaimer.html
+++ b/disclaimer.html
@@ -48,7 +48,8 @@ https://github.com/aidswidjaja
       <img src="res/lively.png" width="64" height="64" alt="Lively logo">
     </a>
 
-    <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler btn btn-outline-info" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       Menu
     </button>
 
@@ -80,13 +81,15 @@ https://github.com/aidswidjaja
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <div id="page">  <!-- on screens less wide than lg breakpoint (as defined by Bootstrap), hide the splash div-->
+  <div id="page">
+    <!-- on screens less wide than lg breakpoint (as defined by Bootstrap), hide the splash div-->
     <h1 class="display-4" id="pagetext">Disclaimer</h1>
-    <h2 class="content" id="pagetext">Lively is in no way an economic community which provides legal and professional help.
-        All help provided here is non-professional by hobbyist counsellors.
-        The help provided here is not to be taken as a replacement for professional help.
-        In situations including crisis, professional help sources will be linked to the user by a member of the Helping Hands team.
-        In case of a legal dispute, we hold no responsibility for any loss caused to anyone.
+    <h2 class="content" id="pagetext">No-one within Lively is professionally trained. The propose of Lively is to
+      promote mental health awareness in a free environment. By no means, we should be the last resort to anyone or
+      anyone associated with you needing Mental Health support including but not limited to acting upon hurting
+      themselves, or others. If know anyone that is thinking about harming themselves in any way, please call the United
+      States based National Suicide Prevention Lifeline at 1-800-273-8255, or your equivalent in your country or
+      municipalities.
     </h2>
   </div>
 
