--- a/disclaimer.html
+++ b/disclaimer.html
@@ -84,7 +84,7 @@ https://github.com/aidswidjaja
   <div id="page">
     <!-- on screens less wide than lg breakpoint (as defined by Bootstrap), hide the splash div-->
     <h1 class="display-4" id="pagetext">Disclaimer</h1>
-    <h2 class="content" id="pagetext">No-one within Lively is professionally trained. The propose of Lively is to
+    <h2 class="content" id="pagetext">No-one within Lively is professionally trained. The purpose of Lively is to
       promote mental health awareness in a free environment. By no means, we should be the last resort to anyone or
       anyone associated with you needing Mental Health support including but not limited to acting upon hurting
       themselves, or others. If know anyone that is thinking about harming themselves in any way, please call the United
